--- a/gradle.properties
+++ b/gradle.properties
@@ -1,43 +1,16 @@
+# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-mod_version=1.7.17
-maven_group=io.github.prospector
-archive_name=modmenu
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version = 1.8.9
+	yarn_mappings = 1.8.9+build.202103240745
+	loader_version = 0.9.3+build.202009100647
 
-minecraft_version=1.14.4
-yarn_mappings=1.14.4+build.9
-loader_version=0.10.6+build.214
-fabric_version=0.3.2+build.218-1.14
+# Mod Properties
+	mod_version = 0.1.0
+	maven_group = io.github.boogiemonster1o1
+	archives_base_name = modmenu-1.8.9
 
-# Project Metadata
-project_name=Mod Menu
-project_url=https://www.curseforge.com/minecraft/mc-mods/modmenu
-project_logo=https://media.forgecdn.net/avatars/181/394/636800105210427931.png
-project_color=0x151355
-# default_release_type can be stable, beta, or alpha
-default_release_type=stable
-
-# CurseForge Metadata
-curseforge_slug=modmenu
-curseforge_id=308702
-curseforge_game_versions=1.15.2, Fabric
-curseforge_required_dependencies=
-curseforge_optional_dependencies=
-
-# Mod Loader Metadata
-loader_icon=https://fabricmc.net/assets/logo.png
-loader_name=Fabric
-
-# Discord Emotes
-curseforge_emote=<:curseforge:698031288845729802>
-
-# Webhook Options
-use_project_username=false
-
-# Changelog Options
-# changelog_type can either be literal_commits or commit_change_tags
-changelog_type=commit_change_tags
-# changelog_hide_unimportant_commits tries to hide Merge commits at the moment
-changelog_hide_unimportant_commits=true
-changelog_max_commit_search=200
-discord_webhook_changelog_line_limit=10
+# Dependencies
+	fabric_version = 1.1.0+1.8.9
