--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'maven-publish'
 	id 'fabric-loom' version "0.4-SNAPSHOT"
+	id 'com.matthewprenger.cursegradle' version "1.4.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -83,7 +84,6 @@ jar {
 	from "LICENSE"
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
@@ -99,7 +99,41 @@ publishing {
 
 	// select the repositories you want to publish to
 	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
+		if (project.hasProperty('legacy_fabric_maven_publish_token')) {
+			maven {
+				url 'https://maven.legacyfabric.net/'
+				credentials {
+					username 'BobTheBuildSlave'
+					password project.getProperty('legacy_fabric_maven_publish_token')
+				}
+				authentication {
+					basic(BasicAuthentication)
+				}
+			}
+		}
+	}
+}
+
+curseforge {
+	if (project.hasProperty('curse_api_key')) {
+		apiKey = project.getProperty('curse_api_key')
+	} else if (ENV.CURSE_API_KEY) {
+		apiKey = ENV.CURSE_API_KEY
+	}
+	project {
+		id = '465337'
+		changelog = 'A changelog can be found at https://github.com/BoogieMonster1O1/ModMenu/commits'
+		releaseType = 'beta'
+		addGameVersion '1.8.9'
+		addGameVersion 'Fabric'
+		mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")) {
+			displayName = "[1.8.9] ModMenu ${version}"
+		}
+		afterEvaluate {
+			uploadTask.dependsOn("remapJar")
+		}
+	}
+	options {
+		forgeGradleIntegration = false
 	}
 }
