--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'maven-publish'
 	id 'fabric-loom' version "0.4-SNAPSHOT"
-	id 'com.matthewprenger.cursegradle' version "1.4.0"
+	id "com.modrinth.minotaur" version "1.1.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -114,26 +114,19 @@ publishing {
 	}
 }
 
-curseforge {
-	if (project.hasProperty('curse_api_key')) {
-		apiKey = project.getProperty('curse_api_key')
-	} else if (ENV.CURSE_API_KEY) {
-		apiKey = ENV.CURSE_API_KEY
+task modrinth(type: com.modrinth.minotaur.TaskModrinthUpload, dependsOn: remapJar) {
+	onlyIf {
+		project.hasProperty('modrinth_token')
 	}
-	project {
-		id = '465337'
-		changelog = 'A changelog can be found at https://github.com/BoogieMonster1O1/ModMenu/commits'
-		releaseType = 'beta'
-		addGameVersion '1.8.9'
-		addGameVersion 'Fabric'
-		mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")) {
-			displayName = "[1.8.9] ModMenu ${version}"
-		}
-		afterEvaluate {
-			uploadTask.dependsOn("remapJar")
-		}
-	}
-	options {
-		forgeGradleIntegration = false
-	}
+
+	token = project.hasProperty('modrinth_token') ? project.getProperty('modrinth_token') : ""
+	projectId = "XzTYkVLx"
+	versionNumber = project.version
+	versionName = "[1.8.9] Legacy Mod Menu ${project.version}"
+	releaseType = "release"
+
+	uploadFile = file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")
+
+	addGameVersion('1.8.9')
+	addLoader('fabric')
 }
