--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version = 0.9.3+build.202009100647
 
 # Mod Properties
-	mod_version = 0.1.0
+	mod_version = 0.1.0+1.8.9
 	maven_group = io.github.boogiemonster1o1
-	archives_base_name = modmenu-1.8.9
+	archives_base_name = legacy-modmenu
 
 # Dependencies
 	fabric_version = 1.1.0+1.8.9
