--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version = 1.8.9
-	yarn_mappings = 1.8.9+build.202103240745
-	loader_version = 0.9.3+build.202009100647
+	yarn_mappings = 1.8.9+build.202112030747
+	loader_version = 0.12.12
 
 # Mod Properties
-	mod_version = 0.1.0+1.8.9
+	mod_version = 1.0.0+1.8.9
 	maven_group = io.github.boogiemonster1o1
-	archives_base_name = legacy-modmenu
+	archives_base_name = rewoven-modmenu
 
 # Dependencies
-	fabric_version = 1.1.0+1.8.9
+	api_version = 1.0.0+1.8.9
