--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version = 1.8.9
-	yarn_mappings = 1.8.9+build.202103240745
-	loader_version = 0.9.3+build.202009100647
+	minecraft_version=1.8.9
+	yarn_mappings=1.8.9+build.202206171821
+	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 0.1.0+1.8.9
-	maven_group = io.github.boogiemonster1o1
-	archives_base_name = legacy-modmenu
+	mod_version=0.1.0
+	maven_group=io.github.boogiemonster1o1
+	archives_base_name=legacy-modmenu
 
 # Dependencies
-	fabric_version = 1.1.0+1.8.9
+	fabric_version=1.6.0+1.8.9
