--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	minecraft_version=1.8.9
-	yarn_mappings=1.8.9+build.202206171821
-	loader_version=0.14.8
+	yarn_mappings=1.8.9+build.385
+	loader_version=0.14.9
 
 # Mod Properties
-	mod_version=0.1.0
+	mod_version=1.1.0
 	maven_group=io.github.boogiemonster1o1
 	archives_base_name=legacy-modmenu
 
 # Dependencies
-	fabric_version=1.6.0+1.8.9
+	fabric_version=1.7.1+1.8.9
